--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -1,70 +1,42 @@
 .form-root {
-  display: flex;
-  flex-direction: column;
   width: 100%;
-  height: fit-content;
-  align-items: center;
+  height: min-content;
+  margin: 0 auto;
 }
 
-.form-body {
+.form-content {
   width: 100%;
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding-bottom: 20px;
+  gap: 20px;
 }
-.form-body h3 {
-  text-align: left !important;
-}
-.input-form-my-email {
+
+.form-content h3 {
   width: 100%;
   display: flex;
-  align-items: baseline;
-  position: relative;
+  justify-content: flex-start;
 }
-.input-form-my-email p {
-  font-size: 16px;
-  width: min-content;
-  text-decoration: underline;
-  color: var(--mainColor);
-}
-.input-form-my-email div {
-  width: 30px;
-  height: 30px;
-  background-color: var(--mainColor);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100%;
-  margin-left: auto;
-}
-.input-form-my-email div:hover {
-  cursor: pointer;
-  transform: scale(1.015);
-  opacity: 0.9;
-}
-.input-form-my-email div i {
-  font-size: 16px;
-}
-.email-input-box {
+
+.form-content input {
   height: 40px;
   width: 100%;
-  text-align: left;
   font-size: 16px;
   padding: 10px 10px;
-  box-sizing: border-box;
   border-radius: 4px;
+  text-align: left;
+  box-sizing: border-box;
   border: none;
   font-family: var(--mainFont);
 }
 
-.email-input-box:focus {
+.form-content input:focus {
   border: 1px solid var(--mainColor);
   border-radius: 4px;
   font-family: var(--mainFont);
 }
 
-.message-input-box {
+.form-content textarea {
   min-height: 100px;
   width: 100%;
   font-size: 16px;
@@ -76,49 +48,62 @@
   resize: none;
   border: none;
 }
-.message-input-box:focus {
+
+.form-content textarea:focus {
   border: 1px solid var(--mainColor);
   border-radius: 4px;
   font-family: var(--mainFont);
 }
 
-.submit-button-CTA {
-  margin: 10px 0;
+.form-button-CTA {
+  width: fit-content;
+  margin: 10% auto;
+}
+
+.form-content p {
+  font-size: 16px;
+  font-style: italic;
+  text-decoration: underline;
+  color: var(--mainColor);
 }
 
 .email-form-send-pop-up {
-  position: fixed;
   z-index: 100;
   transform: translateY(-50%);
   top: 50%;
   height: 100vh;
   width: 100vw;
+  position: fixed;
   display: flex;
   justify-content: center;
 }
+
 .email-pop-up-body {
-  position: relative;
   height: 150px;
   width: 250px;
-  background-color: var(--secColor);
   border-radius: 12px;
+  z-index: 1;
+  transform: translateY(-50%);
+  top: 50%;
   border: 1px solid var(--mainColor);
+  background-color: var(--secColor);
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1;
-  transform: translateY(-50%);
-  top: 50%;
 }
+
 .email-pop-up-body h2 {
   text-align: center;
   font-size: 24px;
   margin: 10px 0;
 }
+
 .email-pop-up-body span {
   margin: 10px 0;
 }
+
 .email-pop-up-background {
   position: fixed;
   z-index: -1;
@@ -157,13 +142,13 @@
     border-radius: 8px;
   }
 
-  .message-input-box {
+  .form-message-input {
     min-height: 200px;
     font-size: 24px;
     padding: 20px 20px;
     border-radius: 8px;
   }
-  .message-input-box:focus {
+  .form-message-input:focus {
     border: 2px solid var(--mainColor);
     border-radius: 8px;
   }
@@ -218,13 +203,13 @@
     border-radius: 8px;
   }
 
-  .form-body .message-input-box {
+  .form-body .form-message-input {
     min-height: 200px;
     font-size: 20px;
     padding: 30px 30px;
     border-radius: 8px;
   }
-  .message-input-box:focus {
+  .form-message-input:focus {
     border: 2px solid var(--mainColor);
     border-radius: 8px;
   }
