adding normalization for <b> font weigth 700

--- a/_index.css
+++ b/_index.css
@@ -30,6 +30,7 @@
 
 :root b {
   color: var(--mainColor);
+  font-weight: 700;
 }
 
 /*----------------- animations individual -------------------*/
