--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -57,7 +57,7 @@
 
 .form-button-CTA {
   width: fit-content;
-  margin: 10% auto;
+  margin: 10px auto;
 }
 
 .form-content p {
@@ -67,24 +67,24 @@
   color: var(--mainColor);
 }
 
-.email-form-send-pop-up {
-  z-index: 100;
-  transform: translateY(-50%);
-  top: 50%;
+.email-pop-up-root {
+  z-index: 1000;
   height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
   position: fixed;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
-.email-pop-up-body {
+.email-pop-up-content {
   height: 150px;
   width: 250px;
   border-radius: 12px;
   z-index: 1;
-  transform: translateY(-50%);
-  top: 50%;
+  gap: 20px;
   border: 1px solid var(--mainColor);
   background-color: var(--secColor);
   position: relative;
@@ -95,19 +95,15 @@
 }
 
 .email-pop-up-body h2 {
-  text-align: center;
   font-size: 24px;
-  margin: 10px 0;
-}
-
-.email-pop-up-body span {
-  margin: 10px 0;
 }
 
 .email-pop-up-background {
   position: fixed;
-  z-index: -1;
   background-color: var(--secColor);
+  z-index: 0;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   opacity: 0.9;
