--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -186,6 +186,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  border-radius: 12px;
 }
 .projects-full-screen-asset-close .projects-full-screen-bg {
   display: none;
