added tablet media query to home css

--- a/routes/Home/_home.css
+++ b/routes/Home/_home.css
@@ -5,6 +5,16 @@
   overflow: hidden scroll;
 }
 
+/* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
+
+@media (min-width: 601px) {
+  .rootHome {
+    height: calc(100vh - 80px);
+  }
+}
+
+/* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
+
 @media (min-width: 1181px) {
   ::-webkit-scrollbar {
     width: 12px;
