--- a/components/Buttons/_button.css
+++ b/components/Buttons/_button.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   background: var(--mainColor);
   transition: all 0.2s ease-in-out;
+  min-width: 150px;
 }
 
 .secButton {
@@ -14,6 +15,7 @@
   padding: 12px 20px;
   border-radius: 12px;
   font-size: 16px;
+  min-width: 150px;
   background: var(--secColor);
 }
 
@@ -23,6 +25,7 @@
   padding: 12px 20px;
   border-radius: 12px;
   font-size: 16px;
+  min-width: 150px;
   background: none;
 }
 
@@ -32,6 +35,7 @@
   padding: 12px 20px;
   border-radius: 12px;
   font-size: 16px;
+  min-width: 150px;
   background: none;
   font-style: italic;
   color: var(--mainColor);
@@ -46,6 +50,7 @@
     border-radius: 22px;
     font-size: 20px;
     border: 2px solid white;
+    min-width: 200px;
   }
 
   .secButton {
@@ -53,18 +58,21 @@
     border-radius: 22px;
     font-size: 20px;
     border: 2px solid var(--mainColor);
+    min-width: 200px;
   }
 
   .ghostButton {
     padding: 20px 28px;
     border-radius: 22px;
     font-size: 20px;
+    min-width: 200px;
   }
 
   .linkButton {
     padding: 20px 28px;
     border-radius: 22px;
     font-size: 20px;
+    min-width: 200px;
   }
 }
 
