--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -85,7 +85,6 @@
   text-align: left;
   font-weight: 700;
   width: 100%;
-  padding-left: 20px;
 }
 
 .projects-display-card p {
@@ -97,7 +96,7 @@
 .projects-display-card ul {
   text-align: left;
   width: 100%;
-  padding-left: 20px;
+  padding-left: 30px;
   box-sizing: border-box;
 }
 
@@ -195,46 +194,147 @@
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
 @media (min-width: 601px) {
-  .projects-root {
-    margin-top: 10%;
+  .projects-content {
+    margin-top: 15%;
+    margin-bottom: 15%;
   }
 
   .projects-content img {
-    height: 450px;
+    height: 400px;
   }
 
   .projects-copy {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 15%;
+    gap: 30px;
   }
 
   .projects-copy h2 {
-    font-size: 34px;
+    font-size: 36px;
   }
   .projects-copy p {
-    font-size: 24px;
+    font-size: 20px;
   }
 
-  .projects-CTA button {
-    margin-top: 12%;
+  .projects-CTA {
+    gap: 20px;
+    margin-top: 10%;
   }
 
-  .projects-display-features {
-    margin-bottom: 30%;
+  .projects-display-projects-cards {
+    margin-bottom: 15%;
   }
 
-  .projects-display-features-buttons-CTA {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 30px 0;
+  .projects-display-card {
+    padding: 40px;
     gap: 30px;
+    line-height: 30px;
   }
+
+  .projects-display-card h2 {
+    font-size: 36px;
+    padding: 20px 0;
+  }
+
+  .projects-display-card h3 {
+    font-size: 28px;
+  }
+
+  .projects-display-card p {
+    text-align: justify;
+    font-size: 20px;
+  }
+
+  .projects-display-card ul {
+    padding-left: 50px;
+  }
+
+  .projects-display-card video {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .projects-display-card img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .projects-display-cards-CTA {
+    margin: 20px auto;
+    gap: 20px;
+    flex-direction: row;
+  }
+
+  .projects-card-asset-loader {
+    width: 100%;
+    height: 150px;
+    border: 3px dotted var(--mainColor);
+    color: var(--mainColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   /* -------------------- Projects card styles for img FullScreen open ---------------*/
 
-  .projects-full-screen-asset-open span {
-    top: -80px;
+  .projects-full-screen-asset-open {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0px;
+    z-index: 1000;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .projects-full-screen-asset-open:hover {
+    cursor: pointer;
+  }
+
+  .projects-full-screen-asset-open .projects-full-screen-asset-button {
+    z-index: 1;
+    top: 30%;
+    right: 0;
+    position: absolute;
+  }
+
+  .projects-full-screen-asset-open .projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .projects-full-screen-asset-open .projects-full-screen-bg {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    position: absolute;
+    background-color: black;
+  }
+
+  /* ------- full screen img FullScreen closed  ------ */
+
+  .projects-full-screen-asset-close {
+    display: default;
+  }
+  .projects-full-screen-asset-close:hover {
+    cursor: pointer;
+  }
+  .projects-full-screen-asset-close .projects-full-screen-asset-button {
+    display: none;
+  }
+  .projects-full-screen-asset-close .projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 12px;
+  }
+  .projects-full-screen-asset-close .projects-full-screen-bg {
+    display: none;
   }
 }
 
