--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -153,37 +153,61 @@
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
 @media (min-width: 601px) {
-  .contact-root {
-    margin-top: 10%;
+  .contact-content {
+    margin-top: 15%;
+    margin-bottom: 15%;
   }
 
   .contact-content img {
-    height: 450px;
+    height: 400px;
   }
 
   .contact-copy {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 15%;
+    gap: 30px;
   }
+
   .contact-copy h2 {
-    font-size: 34px;
+    font-size: 36px;
   }
+
   .contact-copy p {
-    font-size: 24px;
+    font-size: 20px;
   }
-  .Contact-CTA button {
-    margin-top: 12%;
+
+  .contact-CTA {
+    gap: 20px;
+    margin-top: 10%;
   }
 
   .contact-options-cards {
-    width: 80%;
-    margin-bottom: 30%;
+    margin-bottom: 15%;
   }
-  .contact-options-cards h3 {
+
+  .contact-display-card {
+    padding: 40px;
+    gap: 30px;
+    line-height: 30px;
+  }
+
+  .contact-display-card h3 {
     font-size: 28px;
   }
-  .contact-options-cards span {
+
+  .contact-display-card-CTA {
     margin: 20px 0;
+  }
+
+  /* -------------------- contact card styles for img FullScreen open ---------------*/
+
+  .contact-full-screen-asset-open .contact-full-screen-asset-button {
+    top: 24%;
+  }
+
+  /* ------- full screen img FullScreen closed  ------ */
+
+  .contact-full-screen-asset-close .contact-display-card-asset {
+    border-radius: 18px;
   }
 }
 
