updated 404 page tablet media query css

--- a/components/Error404/_Error404.css
+++ b/components/Error404/_Error404.css
@@ -33,16 +33,19 @@
 
 @media (min-width: 601px) {
   .error-404-root {
-    gap: 2%;
+    gap: 30px;
   }
+
   .error-404-root img {
-    height: 450px;
+    height: 400px;
   }
-  .error-404-root span {
-    font-size: 34px;
+
+  .error-404-root h2 {
+    font-size: 36px;
   }
+
   .error404-btn {
-    padding-top: 12%;
+    margin-top: 10%;
   }
 }
 
