adding cursos:pointer to all buttons in index css

--- a/_index.css
+++ b/_index.css
@@ -33,6 +33,10 @@
   font-weight: 700;
 }
 
+:root button {
+  cursor: pointer;
+}
+
 /*----------------- animations individual -------------------*/
 
 @keyframes opacity-in {
