--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -92,37 +92,61 @@
 
 @media (min-width: 1181px) {
   .landingPage-root {
-    margin-top: 10%;
+    width: 80%;
+    height: min-content;
+    margin: 0 auto;
   }
+
   .landingPage-content {
+    height: 100%;
+    width: 100%;
+    margin-top: 20%;
+    margin-bottom: 20%;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
   }
 
   .landingPage-content img {
-    height: 450px;
+    height: 250px;
+    object-fit: contain;
+    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+  }
+
+  .landingPage-content img:hover {
+    transform: rotate(10deg) scale(1.1);
   }
 
   .landingPage-copy {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    width: 100%;
+    padding-top: 20%;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
   }
 
   .landingPage-copy h2 {
-    font-size: 34px;
+    font-size: 26px;
+    text-align: left;
+    font-weight: 700;
+    animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .landingPage-copy p {
-    font-size: 20px;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: justify;
+    animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
-  .landingPage-CTA button {
+  .landingPage-CTA {
     display: flex;
-    margin: 0px;
-    margin-top: 12%;
-    height: fit-content;
-    width: fit-content;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+    margin-top: 10%;
+    animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
   }
 }
