--- a/routes/Home/_home.css
+++ b/routes/Home/_home.css
@@ -17,9 +17,11 @@
 
 @media (min-width: 1181px) {
   .rootHome {
-    height: calc(100vh - 80px);
+    height: calc(100vh -80px);
+    position: absolute;
+    top: 80px;
   }
-
+  /* 
   .rootHome::-webkit-scrollbar {
     width: 12px;
     overflow: scroll;
@@ -31,5 +33,22 @@
   .rootHome::-webkit-scrollbar-track {
     border: 1px solid hsla(0, 0%, 10%, 0.5);
     background-color: hsla(0, 0%, 20%, 1);
+  } */
+
+  .rootHome::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .rootHome::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  .rootHome::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 9999px;
+  }
+
+  .rootHome::-webkit-scrollbar-thumb:hover {
+    background-color: #aaa;
   }
 }
