--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -100,17 +100,22 @@
   .landingPage-content {
     height: 100%;
     width: 100%;
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+    border: 2px dotted white;
   }
 
   .landingPage-content img {
-    height: 250px;
+    height: auto;
+    width: 40%;
     object-fit: contain;
     animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
     transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    border: 2px dotted white;
   }
 
   .landingPage-content img:hover {
@@ -118,22 +123,24 @@
   }
 
   .landingPage-copy {
-    width: 100%;
-    padding-top: 20%;
-    gap: 20px;
+    width: 50%;
+    padding-top: 0%;
+    gap: 30px;
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    border: 2px dotted white;
   }
 
   .landingPage-copy h2 {
-    font-size: 26px;
+    font-size: 46px;
     text-align: left;
     font-weight: 700;
     animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
   .landingPage-copy p {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
     text-align: justify;
     animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
@@ -142,9 +149,9 @@
   .landingPage-CTA {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    gap: 10px;
-    margin-top: 10%;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 5%;
     animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
     animation-delay: 1s;
     animation-fill-mode: backwards;
