--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -110,7 +110,7 @@
   }
 
   .landingPage-content img {
-    height: auto;
+    height: 100%;
     width: 40%;
     object-fit: contain;
     animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
