--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -150,6 +150,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
     gap: 20px;
     margin-top: 5%;
     animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
