--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -286,60 +286,213 @@
 
 @media (min-width: 1181px) {
   .projects-root {
-    margin-top: 10%;
+    width: 80%;
+    height: min-content;
+    margin: 0 auto;
   }
+
   .projects-content {
+    height: 100%;
+    width: 100%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
+    border: 2px dotted white;
   }
 
   .projects-content img {
-    height: 450px;
+    height: 100%;
+    width: 40%;
+    object-fit: contain;
+    animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    transition: all 0.4s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+    border: 2px dotted white;
   }
+
+  .projects-content img:hover {
+    transform: rotate(10deg) scale(1.1);
+  }
+
   .projects-copy {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    width: 50%;
+    padding-top: 0%;
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 2px dotted white;
   }
 
   .projects-copy h2 {
-    font-size: 34px;
+    font-size: 46px;
+    text-align: left;
+    font-weight: 700;
+    animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
   .projects-copy p {
     font-size: 20px;
-  }
-  .projects-CTA button {
-    display: flex;
-    margin: 0px;
-    margin-top: 12%;
-    height: fit-content;
-    width: fit-content;
+    font-weight: normal;
+    text-align: justify;
+    animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
   }
 
-  .projects-display-features {
+  .projects-CTA {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 20px;
     margin-top: 5%;
-    margin-bottom: 10%;
-    width: 80%;
+    animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
   }
-  .projects-display-features-buttons-CTA {
+
+  .projects-display-projects-cards {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 80%;
+    margin-bottom: 10%;
+  }
+
+  .projects-display-projects-cards hr {
+    width: 90%;
+    border-radius: 100%;
+    margin: 20px auto;
+  }
+
+  .projects-display-card {
+    width: 100%;
+    padding: 40px;
+    gap: 30px;
+    line-height: 20px;
+    height: fit-content;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .projects-display-card h2 {
+    font-size: 46px;
+    text-align: center;
+    font-weight: 700;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: underline;
+  }
+
+  .projects-display-card h3 {
+    font-size: 32px;
+    text-align: left;
+    font-weight: 700;
+    width: 100%;
+  }
+
+  .projects-display-card p {
+    text-align: justify;
+    font-size: 20px;
+    width: 100%;
+  }
+
+  .projects-display-card ul {
+    text-align: left;
+    width: 100%;
+    padding-left: 50px;
+    box-sizing: border-box;
+  }
+
+  .projects-display-card video {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .projects-display-card img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .projects-display-cards-CTA {
+    display: flex;
     flex-direction: row;
-    margin: 20px 0;
-    gap: 10px;
+    align-items: center;
+    margin: 20px auto;
+    gap: 20px;
+  }
+
+  .projects-card-asset-loader {
+    width: 100%;
+    height: 450px;
+    border: 3px dotted var(--mainColor);
+    color: var(--mainColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   /* -------------------- Projects card styles for img FullScreen open ---------------*/
 
   .projects-full-screen-asset-open {
-    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0px;
+    z-index: 1000;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
   }
-  .projects-full-screen-asset-open span {
-    top: 10px;
+
+  .projects-full-screen-asset-open:hover {
+    cursor: pointer;
+  }
+
+  .projects-full-screen-asset-open .projects-full-screen-asset-button {
+    z-index: 2;
+    top: 0;
+    right: 0;
+    position: absolute;
+  }
+
+  .projects-full-screen-asset-open .projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    object-fit: contain;
+  }
+
+  .projects-full-screen-asset-open .projects-full-screen-bg {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    position: absolute;
+    background-color: black;
   }
 
   /* ------- full screen img FullScreen closed  ------ */
 
   .projects-full-screen-asset-close {
     display: default;
+  }
+  .projects-full-screen-asset-close:hover {
+    cursor: pointer;
+  }
+  .projects-full-screen-asset-close .projects-full-screen-asset-button {
+    display: none;
+  }
+  .projects-full-screen-asset-close .projects-display-card-asset {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 18px;
+  }
+  .projects-full-screen-asset-close .projects-full-screen-bg {
+    display: none;
   }
 }
